feat (Competition): Exibir e gerar fase de grupos e fase eliminatoria