@@ -1,31 +1,30 @@
 package br.edu.ifs.playifs.competition;
 
-import br.edu.ifs.playifs.competition.dto.CompetitionDetailsDTO;
-import br.edu.ifs.playifs.competition.dto.CompetitionInputDTO;
-import br.edu.ifs.playifs.competition.dto.CompetitionSummaryDTO;
+import br.edu.ifs.playifs.competition.dto.*;
 import br.edu.ifs.playifs.competition.model.Competition;
+import br.edu.ifs.playifs.competition.model.GameGroup;
 import br.edu.ifs.playifs.data.course.model.enums.CourseLevel;
+import br.edu.ifs.playifs.data.sport.SportRepository;
+import br.edu.ifs.playifs.data.sport.model.Sport;
 import br.edu.ifs.playifs.game.GameRepository;
+import br.edu.ifs.playifs.game.dto.GameDetailsDTO;
+import br.edu.ifs.playifs.game.model.Game;
+import br.edu.ifs.playifs.game.model.enums.GamePhase;
+import br.edu.ifs.playifs.game.model.enums.GameStatus;
+import br.edu.ifs.playifs.report.ReportService;
+import br.edu.ifs.playifs.report.dto.GroupStandingsReportDTO;
 import br.edu.ifs.playifs.shared.exceptions.BusinessException;
 import br.edu.ifs.playifs.shared.exceptions.ResourceNotFoundException;
 import br.edu.ifs.playifs.shared.util.TeamStanding;
 import br.edu.ifs.playifs.shared.web.dto.PageDTO;
 import br.edu.ifs.playifs.team.TeamRepository;
+import br.edu.ifs.playifs.team.model.Team;
 import jakarta.persistence.EntityNotFoundException;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import br.edu.ifs.playifs.competition.model.GameGroup;
-import br.edu.ifs.playifs.game.dto.GameDetailsDTO;
-import br.edu.ifs.playifs.game.model.enums.GamePhase;
-import br.edu.ifs.playifs.game.model.enums.GameStatus;
-import br.edu.ifs.playifs.game.model.Game;
-import br.edu.ifs.playifs.team.model.Team;
 
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
@@ -36,18 +35,27 @@ import java.util.stream.Collectors;
 @Service
 public class CompetitionService {
 
-    @Autowired private CompetitionRepository repository;
-    @Autowired private TeamRepository teamRepository;
-    @Autowired private GameGroupRepository groupRepository;
-    @Autowired private GameRepository gameRepository;
+    private final CompetitionRepository repository;
+    private final TeamRepository teamRepository;
+    private final GameGroupRepository groupRepository;
+    private final GameRepository gameRepository;
+    private final ReportService reportService;
+    private final SportRepository sportRepository; // Nova dependência
+
+    public CompetitionService(CompetitionRepository repository, TeamRepository teamRepository, GameGroupRepository groupRepository, GameRepository gameRepository, ReportService reportService, SportRepository sportRepository) {
+        this.repository = repository;
+        this.teamRepository = teamRepository;
+        this.groupRepository = groupRepository;
+        this.gameRepository = gameRepository;
+        this.reportService = reportService;
+        this.sportRepository = sportRepository; // Inicialização da nova dependência
+    }
 
     @Transactional(readOnly = true)
     public PageDTO<CompetitionSummaryDTO> findAll(String name, CourseLevel level, Pageable pageable) {
-
         Specification<Competition> spec = Specification.anyOf();
         spec = spec.and(CompetitionSpecification.hasName(name));
         spec = spec.and(CompetitionSpecification.hasLevel(level));
-
         Page<Competition> page = repository.findAll(spec, pageable);
         Page<CompetitionSummaryDTO> pageDto = page.map(CompetitionSummaryDTO::new);
         return new PageDTO<>(pageDto);
@@ -94,64 +102,63 @@ public class CompetitionService {
 
     @Transactional
     public void batchDelete(List<Long> ids) {
-        // Busca todas as competições de uma vez para otimizar e validar
         List<Competition> competitionsToDelete = repository.findAllById(ids);
-
         if (competitionsToDelete.size() != ids.size()) {
             throw new ResourceNotFoundException("Uma ou mais competições não foram encontradas.");
         }
-
-        // Validação de negócio: verifica se alguma competição possui equipes
         for (Competition competition : competitionsToDelete) {
             if (!competition.getTeams().isEmpty()) {
                 throw new BusinessException("Não é possível apagar a competição '" + competition.getName() + "' (ID: " + competition.getId() + ") pois ela já possui equipas inscritas.");
             }
         }
-
         repository.deleteAllInBatch(competitionsToDelete);
     }
 
+    // ✅ MÉTODO AUXILIAR ATUALIZADO COM A LÓGICA DE ASSOCIAÇÃO
     private void copyDtoToEntity(CompetitionInputDTO dto, Competition entity) {
         entity.setName(dto.getName());
         entity.setLevel(dto.getLevel());
-    }
 
-    // --- MÉTODO DE GERAÇÃO DE GRUPOS (sem alterações) ---
+        // Limpa a lista antiga para garantir que a atualização substitua os desportos
+        entity.getSports().clear();
+
+        if (dto.getSportIds() != null && !dto.getSportIds().isEmpty()) {
+            // Busca todas as entidades Sport com base nos IDs fornecidos
+            List<Sport> sports = sportRepository.findAllById(dto.getSportIds());
+            if (sports.size() != dto.getSportIds().size()) {
+                throw new ResourceNotFoundException("Um ou mais IDs de desportos fornecidos não foram encontrados.");
+            }
+            // Adiciona os desportos encontrados à competição
+            entity.setSports(new HashSet<>(sports));
+        }
+    }
 
     @Transactional
     public List<GameDetailsDTO> generateGroupStage(Long competitionId, Long sportId) {
         Competition competition = repository.findById(competitionId)
                 .orElseThrow(() -> new BusinessException("Competição não encontrada."));
-
         List<Team> teams = competition.getTeams().stream()
                 .filter(team -> team.getSport().getId().equals(sportId))
                 .collect(Collectors.toList());
-
         boolean groupsAlreadyExist = teams.stream().anyMatch(team -> team.getGameGroup() != null);
         if (groupsAlreadyExist) {
             throw new BusinessException("A fase de grupos para este desporto já foi gerada.");
         }
-
         if (teams.size() < 3) {
             throw new BusinessException("São necessárias no mínimo 3 equipes para gerar a fase de grupos.");
         }
-
         Collections.shuffle(teams);
-
         AtomicReference<Instant> nextGameTime = new AtomicReference<>(Instant.now().plus(2, ChronoUnit.DAYS).truncatedTo(ChronoUnit.HOURS));
         long gameIntervalHours = 2;
-
         int totalTeams = teams.size();
         List<Integer> groupSizes = calculateGroupSizes(totalTeams);
         List<Game> allNewGames = new ArrayList<>();
         int teamIndex = 0;
-
         for (int i = 0; i < groupSizes.size(); i++) {
             int size = groupSizes.get(i);
             GameGroup group = new GameGroup();
-            group.setName("Grupo " + (char) ('A' + i) + " - " + competition.getName() + " (" + teams.get(0).getSport().getName() + ")");
+            group.setName("Grupo " + (char) ('A' + i) + " - " + competition.getName() + " (" + teams.getFirst().getSport().getName() + ")");
             group = groupRepository.save(group);
-
             List<Team> groupTeams = new ArrayList<>();
             for (int j = 0; j < size; j++) {
                 Team team = teams.get(teamIndex++);
@@ -159,60 +166,45 @@ public class CompetitionService {
                 teamRepository.save(team);
                 groupTeams.add(team);
             }
-
             List<Game> groupGames = createGamesForGroup(group, groupTeams, nextGameTime, gameIntervalHours);
             allNewGames.addAll(groupGames);
         }
-
         gameRepository.saveAll(allNewGames);
         return allNewGames.stream().map(GameDetailsDTO::new).toList();
     }
 
-    // =================================================================
-    // === MÉTODO generateEliminationStage TOTALMENTE REATORADO ======
-    // =================================================================
     @Transactional
     public List<GameDetailsDTO> generateEliminationStage(Long competitionId, Long sportId) {
         Competition competition = repository.findById(competitionId)
                 .orElseThrow(() -> new ResourceNotFoundException("Competição não encontrada."));
-
         List<Game> allEliminationGames = gameRepository.findAllEliminationGamesByCompetitionAndSport(competitionId, sportId);
-
         boolean hasPendingGames = allEliminationGames.stream()
                 .anyMatch(game -> game.getStatus() == GameStatus.SCHEDULED);
         if (hasPendingGames) {
             throw new BusinessException("Existem jogos da fase eliminatória atual que ainda não foram finalizados.");
         }
-
         boolean tournamentIsFinished = allEliminationGames.stream()
                 .anyMatch(game -> game.getPhase() == GamePhase.FINAL && game.getStatus() != GameStatus.SCHEDULED);
         if (tournamentIsFinished) {
             throw new BusinessException("Este torneio já foi finalizado e não pode gerar novas fases.");
         }
-
         List<Game> newGames = new ArrayList<>();
         GamePhase lastPlayedPhase = allEliminationGames.stream()
                 .map(Game::getPhase)
                 .max(Comparator.comparing(Enum::ordinal))
                 .orElse(null);
-
         if (lastPlayedPhase == null) {
-            // Cenário 1: Gerar a PRIMEIRA fase eliminatória a partir dos grupos.
             List<Team> teamsForNextRound = getTeamsFromGroupStage(competition, sportId);
             if (teamsForNextRound.size() < 2) {
                 throw new BusinessException("Não há equipas suficientes para gerar a fase eliminatória.");
             }
             GamePhase nextPhase = getPhaseFor(teamsForNextRound.size());
             newGames.addAll(generateKnockoutRound(teamsForNextRound, nextPhase));
-
         } else if (lastPlayedPhase == GamePhase.SEMI_FINALS) {
-            // Cenário 2: Semifinais terminaram. Gerar a FINAL e a DISPUTA DE TERCEIRO LUGAR.
             List<Game> semiFinalGames = allEliminationGames.stream()
                     .filter(g -> g.getPhase() == GamePhase.SEMI_FINALS).toList();
-
             List<Team> winners = semiFinalGames.stream().map(this::getWinner).toList();
             List<Team> losers = semiFinalGames.stream().map(this::getLoser).toList();
-
             if (winners.size() == 2) {
                 newGames.add(createEliminationGame(winners.get(0), winners.get(1), GamePhase.FINAL));
             }
@@ -220,66 +212,80 @@ public class CompetitionService {
                 newGames.add(createEliminationGame(losers.get(0), losers.get(1), GamePhase.THIRD_PLACE_DISPUTE));
             }
         } else {
-            // Cenário 3: Outra fase eliminatória (ex: Quartas) terminou. Gerar a fase seguinte.
             List<Team> winners = allEliminationGames.stream()
                     .filter(game -> game.getPhase() == lastPlayedPhase)
                     .map(this::getWinner)
-                    .collect(Collectors.toList());
-
+                    .toList();
             List<Team> initialQualifiedTeams = getTeamsFromGroupStage(competition, sportId);
             int byesInFirstRound = getNextPowerOfTwo(initialQualifiedTeams.size()) - initialQualifiedTeams.size();
-
             List<Team> teamsForNextRound = new ArrayList<>();
             if (getPhaseFor(initialQualifiedTeams.size()) == lastPlayedPhase) {
                 teamsForNextRound.addAll(initialQualifiedTeams.subList(0, byesInFirstRound));
             }
             teamsForNextRound.addAll(winners);
-
             if (teamsForNextRound.size() < 2) {
                 throw new BusinessException("Não há equipas suficientes para gerar a próxima fase.");
             }
             GamePhase nextPhase = getPhaseFor(teamsForNextRound.size());
             newGames.addAll(generateKnockoutRound(teamsForNextRound, nextPhase));
         }
-
         if (newGames.isEmpty()) {
             throw new BusinessException("Nenhuma nova fase a ser gerada no momento. O torneio pode ter sido concluído.");
         }
-
         gameRepository.saveAll(newGames);
         return newGames.stream().map(GameDetailsDTO::new).toList();
     }
 
-    // --- MÉTODOS PRIVADOS AUXILIARES (Refatorados) ---
+    @Transactional(readOnly = true)
+    public GroupStageViewDTO getGroupStageView(Long competitionId, Long sportId) {
+        List<GameGroup> groups = groupRepository.findByCompetitionIdAndSportId(competitionId, sportId);
+        if (groups.isEmpty()) {
+            throw new ResourceNotFoundException("Fase de grupos não encontrada ou ainda não gerada para esta competição/desporto.");
+        }
+        List<GroupStandingsReportDTO> standingsReports = groups.stream()
+                .map(group -> reportService.getGroupStandings(group.getId()))
+                .collect(Collectors.toList());
+        return new GroupStageViewDTO(standingsReports);
+    }
+
+    @Transactional(readOnly = true)
+    public EliminationBracketDTO getEliminationBracketView(Long competitionId, Long sportId) {
+        List<Game> eliminationGames = gameRepository.findAllEliminationGamesByCompetitionAndSport(competitionId, sportId);
+        if (eliminationGames.isEmpty()) {
+            throw new ResourceNotFoundException("Fase eliminatória não encontrada ou ainda não gerada.");
+        }
+        Map<GamePhase, List<GameDetailsDTO>> rounds = eliminationGames.stream()
+                .sorted(Comparator.comparing(Game::getDateTime, Comparator.nullsLast(Comparator.naturalOrder())))
+                .collect(Collectors.groupingBy(
+                        Game::getPhase,
+                        TreeMap::new,
+                        Collectors.mapping(GameDetailsDTO::new, Collectors.toList())
+                ));
+        return new EliminationBracketDTO(rounds);
+    }
 
     private List<Team> getTeamsFromGroupStage(Competition competition, Long sportId) {
         List<Team> teamsOfSport = competition.getTeams().stream()
                 .filter(team -> team.getSport().getId().equals(sportId))
                 .toList();
-
         boolean allGroupGamesFinished = teamsOfSport.stream()
                 .filter(team -> team.getGameGroup() != null)
                 .flatMap(team -> team.getGameGroup().getGames().stream())
                 .allMatch(game -> game.getStatus() == GameStatus.FINISHED || game.getStatus() == GameStatus.WO);
-
         if (!allGroupGamesFinished) {
             throw new BusinessException("Ainda existem jogos pendentes na fase de grupos para este esporte.");
         }
-
         List<GameGroup> groups = teamsOfSport.stream()
                 .map(Team::getGameGroup)
                 .filter(Objects::nonNull)
                 .distinct()
                 .toList();
-
         List<TeamStanding> firstPlaceFinishers = new ArrayList<>();
         List<TeamStanding> secondPlaceFinishers = new ArrayList<>();
-
         for (GameGroup group : groups) {
             List<TeamStanding> standings = group.getTeams().stream()
                     .map(TeamStanding::new)
                     .collect(Collectors.toCollection(ArrayList::new));
-
             for (Game game : group.getGames()) {
                 if (game.getStatus() == GameStatus.FINISHED || game.getStatus() == GameStatus.WO) {
                     TeamStanding standingA = standings.stream().filter(s -> s.getTeam().equals(game.getTeamA())).findFirst().get();
@@ -291,14 +297,11 @@ public class CompetitionService {
             if (!standings.isEmpty()) firstPlaceFinishers.add(standings.get(0));
             if (standings.size() > 1) secondPlaceFinishers.add(standings.get(1));
         }
-
         firstPlaceFinishers.sort(TeamStanding::compareTo);
         secondPlaceFinishers.sort(TeamStanding::compareTo);
-
         List<Team> qualifiedTeams = new ArrayList<>();
         firstPlaceFinishers.forEach(standing -> qualifiedTeams.add(standing.getTeam()));
         secondPlaceFinishers.forEach(standing -> qualifiedTeams.add(standing.getTeam()));
-
         return qualifiedTeams;
     }
 
@@ -306,13 +309,10 @@ public class CompetitionService {
         int numTeams = teams.size();
         List<Team> teamsToPlay = new ArrayList<>(teams);
         int byes = getNextPowerOfTwo(numTeams) - numTeams;
-
-        List<Team> teamsWithBye = new ArrayList<>();
         if (byes > 0 && numTeams > 2) {
-            teamsWithBye.addAll(teams.subList(0, byes));
+            List<Team> teamsWithBye = new ArrayList<>(teams.subList(0, byes));
             teamsToPlay.removeAll(teamsWithBye);
         }
-
         List<Game> games = new ArrayList<>();
         for (int i = 0; i < teamsToPlay.size() / 2; i++) {
             Team teamA = teamsToPlay.get(i);
@@ -338,11 +338,17 @@ public class CompetitionService {
     }
 
     private Team getWinner(Game game) {
+        if(game.getScoreTeamA() == null || game.getScoreTeamB() == null){
+            throw new BusinessException("O jogo " + game.getId() + " não possui placar definido.");
+        }
         if (game.getScoreTeamA() > game.getScoreTeamB()) return game.getTeamA();
         return game.getTeamB();
     }
 
     private Team getLoser(Game game) {
+        if(game.getScoreTeamA() == null || game.getScoreTeamB() == null){
+            throw new BusinessException("O jogo " + game.getId() + " não possui placar definido.");
+        }
         if (game.getScoreTeamA() < game.getScoreTeamB()) return game.getTeamA();
         return game.getTeamB();
     }
@@ -352,11 +358,20 @@ public class CompetitionService {
         List<Integer> sizes = new ArrayList<>();
         int numGroupsOf4 = 0, numGroupsOf3 = 0;
         switch (totalTeams % 3) {
-            case 0: numGroupsOf3 = totalTeams / 3; break;
-            case 1: numGroupsOf4 = 1; numGroupsOf3 = (totalTeams - 4) / 3; break;
+            case 0:
+                numGroupsOf3 = totalTeams / 3;
+                break;
+            case 1:
+                numGroupsOf4 = 1;
+                numGroupsOf3 = (totalTeams - 4) / 3;
+                break;
             case 2:
-                if (totalTeams == 5) { sizes.add(5); return sizes; }
-                numGroupsOf4 = 2; numGroupsOf3 = (totalTeams - 8) / 3;
+                if (totalTeams == 5) {
+                    sizes.add(5);
+                    return sizes;
+                }
+                numGroupsOf4 = 2;
+                numGroupsOf3 = (totalTeams - 8) / 3;
                 break;
         }
         for (int i = 0; i < numGroupsOf4; i++) sizes.add(4);
@@ -392,6 +407,9 @@ public class CompetitionService {
     }
 
     private void updateStandings(Game game, TeamStanding standingA, TeamStanding standingB) {
+        if(game.getScoreTeamA() == null || game.getScoreTeamB() == null){
+            throw new BusinessException("O jogo " + game.getId() + " não possui placar definido.");
+        }
         standingA.setGoalsFor(standingA.getGoalsFor() + game.getScoreTeamA());
         standingA.setGoalsAgainst(standingA.getGoalsAgainst() + game.getScoreTeamB());
         standingB.setGoalsFor(standingB.getGoalsFor() + game.getScoreTeamB());
